package com.canbankx.account.model.enums;

public enum AccountType {
    CHECKING,
    SAVINGS
}
