package com.canbankx.payment.model.enums;

public enum TransactionStatus {
    PENDING,
    COMPLETED,
    FAILED
}
